kubernetes/apps/home/emqx/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    glance/name: "EMQX"
    glance/show: "true"
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/emqx.png"
    glance/id: "Home Automation"
spec:
  hostnames:
    - "emqx.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-headless
          namespace: home
          port: 18083
